--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,246 @@
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
+
+:root {
+  --font-primary: "Alata", sans-serif;
+  --font-secondary: "Josefin Sans", sans-serif;
+  --font-size: 15px;
+  --white: hsl(0, 0%, 100%);
+  --black: hsl(0, 0%, 0%);
+  --gray: hsl(0, 0%, 55%);
+  --dark-gray: hsl(0, 0%, 41%);
+}
+
+/* CSS Reset */
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+img,
+svg {
+  display: block;
+}
+
+/* General Styles */
+body {
+  font-family: var(--font-primary);
+  font-size: var(--font-size);
+  font-weight: 400;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("../images/desktop/image-hero.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 40.5rem;
+  color: var(--black);
+}
+
+.header-section,
+.main-section,
+.footer-container {
+  width: min(87.2%, 69.5rem);
+  margin-inline: auto;
+}
+
+/* Header Section */
+.header-section {
+  margin-top: 4rem;
+}
+
+.nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+}
+
+.nav-link {
+  margin-left: 2.05rem;
+}
+
+.nav-link:first-of-type {
+  margin-left: 0;
+}
+
+.nav-link:last-of-type {
+  margin-right: 0.1rem;
+}
+
+.nav-link a {
+  color: var(--white);
+  text-decoration: none;
+}
+
+.title {
+  text-transform: uppercase;
+  font-family: var(--font-secondary);
+  font-weight: 300;
+  font-size: 4.4rem;
+  border: 2px solid var(--white);
+  width: min(100%, 40.75rem);
+  padding: 2.5rem 2.5rem 1.5rem;
+  color: var(--white);
+  margin: 8rem 0 9rem;
+  line-height: 1;
+  letter-spacing: 0.015em;
+}
+
+/* Main Section */
+.section-heading {
+  text-transform: uppercase;
+  font-family: var(--font-secondary);
+  font-weight: 300;
+  font-size: 3rem;
+}
+
+.interactive {
+  padding-top: 10rem;
+  position: relative;
+}
+
+.interactive-text {
+  position: absolute;
+  background-color: var(--white);
+  width: 34rem;
+  right: 0;
+  bottom: -3rem;
+  padding: 5.75rem 0 3rem 6rem;
+}
+
+.interactive-section {
+  margin-bottom: 1.75rem;
+}
+
+.interactive-paragraph {
+  color: var(--gray);
+  line-height: 1.7;
+}
+
+.creations {
+  margin: 11.5rem 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, auto);
+  gap: 1.9rem;
+}
+
+.creations-heading {
+  grid-column: span 3;
+  margin-bottom: 3rem;
+}
+
+.see-all-container {
+  justify-self: end;
+  margin-top: 0.75rem;
+}
+
+.see-all {
+  border: 2px solid var(--dark-gray);
+  padding: 0.5rem 2.5rem 0.5rem 2.5rem;
+  text-transform: uppercase;
+  color: var(--black);
+  text-decoration: none;
+  letter-spacing: 0.25em;
+}
+
+.creation {
+  position: relative;
+}
+
+.creation::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 100%);
+  width: 100%;
+  height: 100%;
+}
+
+.project-title {
+  color: var(--white);
+  font-family: var(--font-secondary);
+  font-size: 2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 2rem;
+  left: 2.5rem;
+  z-index: 10;
+}
+
+.deep-earth {
+  width: 6rem;
+}
+
+.the-grid {
+  width: 4.5rem;
+}
+
 /* Footer Section */
+.footer-section {
+  background-color: var(--black);
+  color: var(--white);
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  justify-content: space-between;
+  row-gap: 1.5rem;
+  padding: 2.75rem 0 2.5rem;
+}
+
+.footer-logo {
+  width: 9rem;
+  height: auto;
+}
+
+.footer-logo .logo {
+  width: 100%;
+  height: auto;
+}
+
+.social-icons {
+  display: flex;
+  gap: 1rem;
+  justify-content: end;
+  align-items: center;
+}
+
+.footer-links {
+  list-style: none;
+  display: flex;
+}
+
+.footer-link {
+  margin-right: 2.05rem;
+}
+
+.footer-link:last-of-type {
+  margin-right: 0;
+}
+
+.footer-link a {
+  color: var(--white);
+  text-decoration: none;
+}
+
+.copyright {
+  color: var(--dark-gray);
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--white);
+  text-decoration: none;
 }
