--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ body {
 
 .nav-link {
   margin-left: 2.05rem;
+  position: relative;
 }
 
 .nav-link:first-of-type {
@@ -149,6 +150,11 @@ body {
   letter-spacing: 0.25em;
 }
 
+.see-all:hover {
+  background-color: var(--black);
+  color: var(--white);
+}
+
 .creation {
   position: relative;
 }
@@ -161,6 +167,21 @@ body {
   background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 100%);
   width: 100%;
   height: 100%;
+}
+
+.creation:hover {
+  cursor: pointer;
+}
+
+.creation:hover::after {
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.75),
+    rgba(255, 255, 255, 0.75)
+  );
+}
+
+.creation:hover .project-title {
+  color: var(--black);
 }
 
 .project-title {
@@ -214,6 +235,24 @@ body {
   align-items: center;
 }
 
+.social-icon-container {
+  position: relative;
+}
+
+.social-icon-container:hover {
+  cursor: pointer;
+}
+
+.social-icon-container:hover::after {
+  content: "";
+  width: 1.5rem;
+  height: 2px;
+  border-top: 2px solid var(--white);
+  position: absolute;
+  left: 1px;
+  bottom: -0.75rem;
+}
+
 .footer-links {
   list-style: none;
   display: flex;
@@ -221,6 +260,7 @@ body {
 
 .footer-link {
   margin-right: 2.05rem;
+  position: relative;
 }
 
 .footer-link:last-of-type {
@@ -230,6 +270,19 @@ body {
 .footer-link a {
   color: var(--white);
   text-decoration: none;
+}
+
+.footer-link a:hover::after,
+.nav-link a:hover::after {
+  content: "";
+  width: 1.5rem;
+  height: 2px;
+  border-top: 2px solid var(--white);
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-inline: auto;
+  bottom: -0.75rem;
 }
 
 .copyright {
@@ -243,4 +296,8 @@ body {
 .attribution a {
   color: var(--white);
   text-decoration: none;
+}
+
+.attribution a:hover {
+  text-decoration: underline;
 }
