--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,12 @@ body {
   margin-inline: auto;
 }
 
+button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
 /* Header Section */
 .header-section {
   margin-top: 4rem;
@@ -53,6 +59,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.header-logo {
+  position: relative;
+  z-index: 1000;
 }
 
 .nav-links {
@@ -76,6 +87,12 @@ body {
 .nav-link a {
   color: var(--white);
   text-decoration: none;
+}
+
+.mobile {
+  position: relative;
+  display: none;
+  z-index: 1000;
 }
 
 .title {
@@ -126,9 +143,9 @@ body {
 .creations {
   margin: 11.5rem 0;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, auto);
-  gap: 1.9rem;
+  gap: 1.8rem;
+  grid-template-columns: repeat(auto-fit, 16rem);
+  justify-content: center;
 }
 
 .creations-heading {
@@ -300,4 +317,193 @@ body {
 
 .attribution a:hover {
   text-decoration: underline;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 1280px) {
+  .creations-heading {
+    grid-column: span 1;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .interactive-text {
+    position: static;
+    width: 100%;
+    text-align: center;
+    padding: 3rem 1.5rem;
+  }
+
+  .interactive-image {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 752px) {
+  body {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("../images/mobile/image-hero.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 40.5rem;
+    color: var(--black);
+  }
+
+  .header-section {
+    margin-top: 2.5rem;
+  }
+
+  .nav-bar {
+    align-items: flex-start;
+  }
+
+  .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    z-index: 100;
+    background-color: var(--black);
+    transform: translateX(100%);
+    transition: transform 500ms ease-in-out;
+  }
+
+  .mobile-menu {
+    position: fixed;
+  }
+
+  .navigation.open {
+    transform: translateX(0);
+  }
+
+  .header-logo {
+    top: 2.5rem;
+  }
+
+  .mobile {
+    display: block;
+    top: 2.9rem;
+    right: 2rem;
+  }
+
+  .mobile:hover button {
+    cursor: pointer;
+  }
+
+  .nav-links {
+    flex-direction: column;
+    margin-top: 14rem;
+  }
+
+  .nav-link {
+    margin: 0 0 2rem 2rem;
+    padding: 0;
+    width: fit-content;
+  }
+
+  .nav-link:first-of-type {
+    margin-left: 2rem;
+  }
+
+  .title {
+    font-size: 2.5rem;
+    padding: 1.5rem 1.75rem;
+    width: min(100%, 20.5rem);
+    margin: 9.5rem 0 11.75rem;
+    line-height: 1;
+    letter-spacing: 0.015em;
+  }
+
+  .section-heading {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .interactive-image,
+  .creation-image {
+    width: 100%;
+    height: auto;
+  }
+
+  .interactive {
+    padding-top: 6rem;
+  }
+
+  .interactive-text {
+    padding-bottom: 0;
+  }
+
+  .creations {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, auto);
+    margin: 6rem 0;
+  }
+
+  .creations-heading {
+    margin: 0;
+    padding-bottom: 1rem;
+  }
+
+  .see-all-container {
+    grid-row: 10 / 11;
+    margin-top: 1rem;
+    justify-self: center;
+  }
+
+  .project-title {
+    font-size: 1.4rem;
+    bottom: 1.5rem;
+    left: 1.5rem;
+    width: 8rem;
+  }
+
+  .deep-earth {
+    width: 5rem;
+  }
+
+  .the-grid {
+    width: 4rem;
+  }
+
+  .footer-section {
+    text-align: center;
+  }
+
+  .footer-container {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    padding-top: 3.5rem;
+  }
+
+  .footer-logo {
+    margin-inline: auto;
+  }
+
+  .social-icons {
+    grid-row: 3 / 4;
+    justify-content: center;
+  }
+
+  .footer-links {
+    flex-direction: column;
+  }
+
+  .footer-link {
+    margin-right: 0;
+    margin-bottom: 1.75rem;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .title {
+    font-size: 1.75rem;
+    margin-bottom: 16.5rem;
+  }
+
+  .section-heading {
+    font-size: 1.6rem;
+  }
 }
