--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ button {
 }
 
 .interactive-section {
-  margin-bottom: 1.75rem;
+  margin-bottom: 1.5rem;
 }
 
 .interactive-paragraph {
@@ -142,7 +142,7 @@ button {
 }
 
 .creations {
-  margin: 11.5rem 0;
+  margin: 11.75rem 0 11.5rem;
   display: grid;
   gap: 1.8rem;
   grid-template-columns: repeat(auto-fit, 16rem);
